# torch-transform-image

./: .copier-answers.yml  .gitignore  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
examples/: rotate_and_shift_image_2d_examples.ipynb  rotate_shift_image_3d_examples.ipynb
src/torch_image_transform/: __init__.py  transforms_2d.py  transforms_3d.py
src/torch_transform_image/: __init__.py  transforms_2d.py  transforms_3d.py
tests/: 20250528-developing_3d_conv_SJR.ipynb  test_torch_image_transform.py
